# Time-Series-Forecast

./: data.yaml  entrophy.py  example_cnn.py  example_data.py  example_dnn.py  example_knn.py  example_lstm.py  example_pred.py  example_transformer.py  icmc_usp.py  lstm_params.yaml  pipeline.py  pipeline_category.py  pipeline_stocks.py  plot.py  plot2.py  plot_all_data.py  pyproject.toml  utils.py
characteristics/: characteristics.py
data/: autoregressive.py  data.py  exponential.py  generate_random.py  icmc_usp.py  linear.py  logistic.py  multi_sinusoidal.py  noise.py  piecewise_constant.py  piecewise_linear.py  polynomial.py  probabilistic_discret.py  random.py  repeating.py  sinus_linear_noise.py  sinusoidal.py  sinusoidal_with_noise.py  stock.py  trend.py  uci_ai_maintenance.py  uci_air_quality.py  uci_electricity.py  uci_gait.py  uci_synthetic_control.py  uniform_piecewise_linear.py
models/: cnn.py  custom_lstm.py  dnn.py  input_lstm.py  lstm.py  open_lstm.py  peephole_lstm.py  transformer.py
params/: cnn_m.yaml  cnn_xs.yaml  custom_lstm.yaml  custom_lstm_2.yaml  dnn.yaml  dnn_m.yaml  dnn_xs.yaml  input_lstm_m.yaml  input_lstm_s.yaml  input_lstm_xs.yaml  lstm.yaml  lstm_s.yaml  lstm_xs.yaml  open_lstm_m.yaml  open_lstm_s.yaml  open_lstm_xs.yaml  peephole_lstm_m.yaml  peephole_lstm_s.yaml  peephole_lstm_xs.yaml  small_lstm.yaml  transformer.yaml
plotting/: plot.py
results/: all_data.csv  all_data_1.csv  all_data_lstm.csv  category_multi_sinusoidal_100.csv  category_piecewise_linear_100.csv  category_repeating_500.csv  category_repeating_noise_100.csv  (+9 more)
(+139 files in other folders)
